--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8080
 spring:
+  profiles:
+    active: dev # 기본적으로 dev 환경임을 명시
   thymeleaf:
     cache: false # 타임리프 캐시끄기
     prefix: file:src/main/resources/templates/ # 타임리프 캐시끄기
@@ -18,5 +20,6 @@ spring:
     hibernate:
       ddl-auto: create # db자동생성 (엔티티 클래스만 만들어주면댐)
     properties:
-      hibernate:
-        show-sql: true
+      show-sql: true
+      format_sql: true
+      use_sql_comments: true
